# oa20gpiolib

./: .gitignore  CMakeLists.txt  README.md
gpio/: oa20_gpio.c  oa20_gpio.h
sample/: gpio-test.c
